--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_API_KEY='AIzaSyBZUyVBp73R0XAkMqsK5UkAWFL51Ek4Z4A';
-REACT_APP_API_URL='http://localhost:5000/';
+REACT_APP_API_URL='http://localhost:5000/'
